# ckanext-noanonaccess

./: MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/noanonaccess/: plugin.py
ckanext/noanonaccess/tests/: test_plugin.py
